# ambiguity_vectors

./: README.md  pyproject.toml
configs/data/: clamber_official_v1.yaml  clarification_seeded_v1.yaml  concept_corpus_v1.yaml  controlled_sweeps_v1.yaml  policy_pairs_v1.yaml  referent_disambiguation.yaml  subtype_concepts_v1.yaml
configs/extraction/: concept_pooled_v1.yaml  first_assistant_token.yaml  multi_positions.yaml  policy_positions_v1.yaml
configs/model/: llama31_8b_instruct.yaml  llama32_1b_instruct.yaml
configs/vectors/: concept_vectors_v1.yaml  multi_position_vectors.yaml  policy_vector_v1.yaml  referent_vector.yaml  subtype_vectors_v1.yaml
data/: policy_pairs_gold_curated_v1.jsonl
data/concepts/referent_disambiguation/: topics.json
data/seeds/: clarification_seeds_realistic_v1.jsonl  clarification_seeds_realistic_v2_with_wrong_negatives.jsonl
src/asv_ambiguity/: config.py
src/asv_ambiguity/activations/: collector.py  positions.py
src/asv_ambiguity/data/: example_prompt.txt  schema.py
src/asv_ambiguity/generation/: dataset_builder.py  templates.py
src/asv_ambiguity/models/: hf.py
src/asv_ambiguity/runners/: collect_activations.py  collect_concept_pooled_activations.py  collect_policy_activations.py  evaluate_policy_vector_on_clamber.py  evaluate_vector_on_controlled_sweeps.py  extract_concept_vectors.py  extract_policy_vector.py  extract_vector.py  generate_concept_corpus.py  generate_controlled_ambiguity_sweeps.py  generate_dataset.py  generate_policy_pairs.py  inspect_dataset.py  prepare_clamber.py  sweep_concept_vectors_on_corpus.py  (+4 more)
(+3 files in other folders)
