[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asv-ambiguity"
version = "0.1.0"
description = "Anthropic-style ambiguity vector starter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "torch>=2.2",
  "transformers>=4.45",
  "accelerate>=0.33",
  "numpy>=1.24",
  "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
